# WaveTech-Audio-Editor

./: .gitmodules  CMakeLists.txt  README.md  gui.c  test.cpp
Dependencies/wavefile/: test.c  wavefile.c  wavefile.h
Documentation/: README.md
documentation/: audio_basics.md
gui/: gui.c
source/: Gui.hpp  Pipe.hpp  communication_protocols.hpp  dsp.cpp  gui.cpp  reverse.cpp  stretch.cpp
wavefile header/: wavefile.c  wavefile.h
